// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with 1 expense corretly 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h2>
</div>
`;

exports[`should render ExpenseSummary with multiple expenses corretly 1`] = `
<div>
  <h2>
    Viewing 
    23
     
    expenses
     totalling 
    $23,545.44
  </h2>
</div>
`;
